service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-devops-service
  namespace: production
  labels:
    app: python-devops-app
spec:
  selector:
    app: python-devops-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
  type: NodePort
